--- a/Polimorphisme/nbproject/project.properties
+++ b/Polimorphisme/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Polimorphisme.jar
+dist.jar=${dist.dir}/Modul7.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Polimorphisme
+dist.jlink.output=${dist.jlink.dir}/Modul7
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Polimorphisme
+jlink.launcher.name=Modul7
 main.class=polimorphisme.AeroPlane
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
